editor/sass/code-editor-v2/code-editor.scss
@import 'variables';
@import '../fonts';

html {
    height: 100%;
    overflow: hidden;
}

body {
    @extend .font-regular;
    min-height: 100%;
    height: 100%;
    overflow: hidden;
    margin: 0;
    font-size: 14px;
}

strong {
    @extend .font-bold;
}

@media (max-width: 480px) {
    .hidden-xs {
        display: none;
    }
}

.noSelect {
    -webkit-touch-callout: none;
    -webkit-user-select: none;
    -khtml-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
}

#ui-root {
    position: absolute;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    width: 100%;
    height: 100%;
    max-height: 100%;
    background-color: $bcg-primary;
    color: $text-primary;

    > .content {
        max-height: 100%;
        height: 100%;
        overflow: hidden;
    }
}

#ui-top {
    background-color: mix($bcg-darkest, black, 75%);

    > .content {
        > .ui-button {
            background-color: transparent;
            border-color: transparent;
            color: $text-secondary;
            margin: 0;
            padding: 0 10px;
            height: 32px;
            line-height: 32px;

            &:hover {
                color: $text-primary;
                background-color: mix($text-darkest, $bcg-darker, 30%);
            }

            &.open {
                color: $text-primary;
                background-color: $bcg-darkest;
            }
        }
    }
}

#ui-center {
    background-color: $bcg-darkest;
}

#ui-code {
    height: calc(100% - 30px);
    > .content {
        height: 100%;
    }
}

#ui-tabs {
    background-color: $bcg-darker;
    box-sizing: border-box;
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;

    margin-bottom: 3px;
    height: 32px;

    .ui-panel.tab {
        cursor: pointer;
        @extend .noSelect;

        flex: 1 1 auto;
        min-width: 10px;
        max-width: 150px;

        box-sizing: border-box;
        -webkit-box-sizing: border-box;
        -moz-box-sizing: border-box;

        background-color: mix($bcg-darker, $bcg-darkest, 25%);
        color: $text-secondary;

        padding: 0 30px 0 5px;
        margin-right: 3px;

        font-size: 13px;
        white-space: nowrap;

        &:not(.grabbed) {
            transition: left 200ms ease;
            -webkit-transition: left 200ms ease;
        }

        &:hover {
            color: $text-primary;
        }

        &.focused {
            background-color: $bcg-darkest;
            color: $text-primary;
            border-bottom: 2px solid $text-active;
            min-width: 100px;
            z-index: 1;
        }

        &.dirty {
            color: transparentize($muted-yellow, 0.15);

            &:hover, &.focused {
                color: $muted-yellow;
            }
        }

        &.grabbed {
            z-index: 10;
        }

        > .content {
            > .ui-panel.name {
                overflow: hidden;
            }

            > .close {
                @extend .font-icon;
                color: $text-secondary;
                background-color: transparent;
                border: 0;
                position: absolute;
                padding: 0;
                margin: 0;
                top: 3px;
                right: -25px;
                font-size: 13px;

                &:hover {
                    color: $text-active;
                }
            }

            > .ui-progress {
                width: calc(100% + 35px);
                position: absolute;
                bottom: -2px;
                left: -5px;
            }
        }


    }
}

#ui-left {
    color: $text-primary;
    width: 220px;

    > .content {
        width: 220px;

        > .ui-progress {
            box-sizing: border-box;
            width: 100%;
            position: absolute;
            left: 0;
            bottom: 0;
            border-right: 1px solid $border-primary;
        }
    }
}

#ui-bottom {
    height: 32px;
    font-size: 14px;
    line-height: 32px;
    background-color: mix($bcg-darkest, black, 75%);
    border-top: 1px solid $border-primary;

    .ui-label {
        margin: 0 0 0 5px;
        height: 32px;
        line-height: 32px;

        color: $status-log;

        &.error {
            color: $status-error;
        }

        &.warning {
            color: $status-warning;
        }

        &.connection-status {
            float: right;
            padding-right: 5px;
        }
    }

}

.ui-tree-item {
    &.rename {
        > .title {
            > .text {
                display: none;
            }
            > .ui-text-field {
                width: calc(100% - 24px);
                margin: 0;
                padding: 0;
                border: none;
                background-color: transparent;

                > .field {
                    padding: 0;
                    @extend .font-regular;
                    font-size: 14px;
                }
            }
        }
    }
}

.ui-menu-item {
    &.noBorder {
        > .title {
            border-bottom: 0;
        }
    }
}

.ui-label.readonly {
    position: absolute;
    right: 0;
    padding: 0px 10px;
    height: 100%;
    line-height: 34px;
    background-color: $bcg-primary;
    margin: 0;
}

.picker-confirm {
    z-index: 10000;
}
/* ... */

